# htmx-eeg-viewer

./: .gitignore  Makefile  main.py  pyproject.toml  synthesis.py
templates/: index.html
